--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,3 +1,4 @@
+# frozen_string_literal: true
 en:
   site_settings:
     discourse_add_new_posts_to_summary_enabled: "Enable DiscourseAddNewPostsToSummary plugin"
